--- a/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
+++ b/purchase_order_report_formats/views/purchase_order_nuevo_formato_reprte.xml
@@ -295,20 +295,29 @@
                         <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%o.amount_untaxed)"/>
                     </td>
                 </tr>
-                <t t-if="o.order_line[1].taxes_id">
-                <tr>
-                    <td style="color:#454545;padding: 3px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: left;">
-                        <t t-if="o.order_line[0].taxes_id">
-                            <span t-esc="o.order_line[0].taxes_id[0].name"/>
-                            <br/>
-                            <span t-esc="'en ' + str(o.currency_id.symbol) +str('%.2f'%o.amount_untaxed)"/>
-                        </t>
-                    </td>
-                    <td style="padding: 3px;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:16px; text-align: right;">
-                        <span style="color:#454545;" t-esc="o.currency_id.symbol +str('%.2f'%o.amount_tax)"/>
-                    </td>
-                </tr>
+
+                <t t-set="count" t-value="o.get_distribucion_impuestos_txt()" />
+                    <t t-foreach="count" t-as="linea_tax" >
+                        <tr>
+                            <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:18px; text-align: left;font-family: Arial;padding: 10px;">                                                        
+                                <span t-esc="linea_tax[0]"/>
+                            </td>
+                            <td style="background-color: #D5D4D4;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:18px;font-family: Arial; text-align: right;padding: 10px;">
+                                <span t-esc="o.pricelist_id.currency_id.symbol"/>
+                                <span t-esc="linea_tax[1]"/>
+                            </td>
+                        </tr>
                 </t>
+                
+
+
+
+
+
+
+
+
+
                 <tr>
                     <td style="padding: 3px;color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:16px; text-align: left;">
                         <span>Total</span>
