--- a/purchase_order_presupuesto_report_formats/views/purchase_order_presupuesto_report.xml
+++ b/purchase_order_presupuesto_report_formats/views/purchase_order_presupuesto_report.xml
@@ -63,32 +63,33 @@
                         <div class="page"> 
                             <div class="row">
                                 <div class="col-7">
-                                    <span style="font-weight: bold; font-size:17px;color:#2B2B2B;font-family: Arial;">Dirección de Envío</span>
+                                    <span style="font-weight: bold; font-size:19px;color:#2B2B2B;font-family: Arial;">Dirección de Envío</span>
                                     <br/>
                                     <t t-if="o.company_id">
-                                        <span style="font-weight: normal; font-size:17px; color:#454545;" t-esc="o.company_id.name"></span>
+                                        <span style="font-weight: normal; font-size:19px; color:#454545;" t-esc="o.company_id.name"></span>
                                     </t>
                                     <br/>
                                     <t t-if="o.company_id.phone">
-                                        <span style="font-weight: normal; font-size:17px; color:#454545;" t-esc="o.company_id.phone"></span>
+                                        <span style="font-weight: normal; font-size:19px; color:#454545;" t-esc="o.company_id.phone"></span>
                                     </t>
                                     <br/>
                                     <t t-if="o.name">
-                                        <span style="font-weight: normal; font-size:17px;color:#2B2B2B;font-family: Arial;">Solicitud de presupuesto</span>
-                                        <span style="font-weight: bold; font-size:17px;" t-esc="o.company_id.phone"></span>
+                                        <span style="font-weight: normal; font-size:19px;color:#2B2B2B;font-family: Arial;">Solicitud de presupuesto</span>
+                                        <span style="font-weight: bold; font-size:19px;" t-esc="o.name"></span>
                                     </t>
                                 </div>
                                 <div class="col-5">
                                     <t t-if="o.partner_id.vat">
-                                        <span>[</span> <span t-field="o.partner_id.vat"></span> <span>]</span>
+                                        <span>[</span> <span style="font-weight: normal; font-size:19px; color:#454545;" t-field="o.partner_id.vat"></span> <span>]</span>
                                     </t>
-                                    <span style="font-weight: normal; font-size:17px; color:#454545;" t-esc="o.partner_id.name"></span>
+                                    <span style="font-weight: normal; font-size:19px; color:#454545;" t-esc="o.partner_id.name"></span>
                                     <br/>
                                     <t t-if="o.partner_id.l10n_latam_identification_type_id">
-                                        <span style="font-weight: normal; font-size:17px; color:#454545;" t-esc="o.partner_id.l10n_latam_identification_type_id.name"></span>
+                                        <span style="font-weight: normal; font-size:19px; color:#454545;" t-esc="o.partner_id.l10n_latam_identification_type_id.name"></span>
+                                        <span style="font-weight: normal; font-size:19px; color:#454545;">: </span>
                                     </t>
                                     <t t-if="o.partner_id.vat">
-                                        <span style="font-weight: normal; font-size:17px;" t-esc="o.partner_id.vat"></span>
+                                        <span style="font-weight: normal; font-size:19px;" t-esc="o.partner_id.vat"></span>
                                     </t>
                                 </div>
                             </div>
@@ -101,13 +102,13 @@
                                     <tbody>
                                         <tr><td></td><td></td><td></td></tr>
                                         <tr>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: left;padding: 8px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: left;padding: 4px;">
                                                 <span style="font-size:21px;font-weight: bold;font-family: Arial;" >DESCRIPCIÓN</span>
                                             </td>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: center;padding: 8px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: center;padding: 4px;">
                                                 <span styles="font-size:21px;font-weight: bold;font-family: Arial;" >FECHA PREVISTA</span>
                                             </td>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: right;padding: 8px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: right;padding: 4px;">
                                                 <span styles="font-size:21px;font-weight: bold;font-family: Arial;" >CANT</span>
                                             </td>
                                         </tr>
@@ -116,17 +117,17 @@
                                         <t t-foreach="o.order_line" t-as="linea" >
                                             <t t-if="contador == len(o.order_line)">
                                             <tr>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 8px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 4px;">
                                                     <t t-if="linea.name">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.name"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center;padding: 8px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center;padding: 4px;">
                                                     <t t-if="linea.date_planned">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.date_planned"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: right;padding: 8px;">
+                                                <td style="background-color: #E3E2E2;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: right;padding: 4px;">
                                                     <t t-if="linea.product_qty">
                                                         <span style="color:#454545;font-family: Arial;" t-field="linea.product_qty"/>
                                                         <br/>
@@ -139,17 +140,17 @@
                                         </t>
                                         <t t-if="contador &lt; len(o.order_line)">
                                             <tr>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 8px;">                                                                                                            
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 4px;">                                                                                                            
                                                     <t t-if="linea.name">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.name"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 8px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 4px;">
                                                     <t t-if="linea.date_planned">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.date_planned"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: right;padding: 8px;">
+                                                <td style="background-color: #E3E2E2;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: right;padding: 4px;">
                                                     <t t-if="linea.product_qty">
                                                         <span style="color:#454545;font-family: Arial;" t-field="linea.product_qty"/>
                                                         <br/>
@@ -168,7 +169,7 @@
                                 <br/><br/>
                             </t>
                             <t t-if="o.notes">
-                                <span style="color:#454545;font-family: Arial;" t-field="o.notes"/>
+                                <span style="font-weight: normal; font-size:20px; color:#454545;" t-field="o.notes"/>
                             </t>
 
 
