--- a/purchase_order_presupuesto_report_formats/views/purchase_order_presupuesto_report.xml
+++ b/purchase_order_presupuesto_report_formats/views/purchase_order_presupuesto_report.xml
@@ -89,7 +89,7 @@
                                         <span style="font-weight: normal; font-size:19px; color:#454545;">: </span>
                                     </t>
                                     <t t-if="o.partner_id.vat">
-                                        <span style="font-weight: normal; font-size:19px;" t-esc="o.partner_id.vat"></span>
+                                        <span style="font-weight: normal; font-size:19px; color:#454545;" t-esc="o.partner_id.vat"></span>
                                     </t>
                                 </div>
                             </div>
@@ -102,13 +102,13 @@
                                     <tbody>
                                         <tr><td></td><td></td><td></td></tr>
                                         <tr>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: left;padding: 4px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:21px; text-align: left;padding: 4px;">
                                                 <span style="font-size:21px;font-weight: bold;font-family: Arial;" >DESCRIPCIÓN</span>
                                             </td>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: center;padding: 4px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:21px; text-align: center;padding: 4px;">
                                                 <span styles="font-size:21px;font-weight: bold;font-family: Arial;" >FECHA PREVISTA</span>
                                             </td>
-                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:16px; text-align: right;padding: 4px;">
+                                            <td style="border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-weight: bold; font-size:21px; text-align: right;padding: 4px;">
                                                 <span styles="font-size:21px;font-weight: bold;font-family: Arial;" >CANT</span>
                                             </td>
                                         </tr>
@@ -117,12 +117,12 @@
                                         <t t-foreach="o.order_line" t-as="linea" >
                                             <t t-if="contador == len(o.order_line)">
                                             <tr>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 4px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:21px; text-align: left;padding: 4px;">
                                                     <t t-if="linea.name">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.name"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center;padding: 4px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:21px; text-align: center;padding: 4px;">
                                                     <t t-if="linea.date_planned">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.date_planned"/>
                                                     </t>
@@ -140,12 +140,12 @@
                                         </t>
                                         <t t-if="contador &lt; len(o.order_line)">
                                             <tr>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: left;padding: 4px;">                                                                                                            
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:21px; text-align: left;padding: 4px;">                                                                                                            
                                                     <t t-if="linea.name">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.name"/>
                                                     </t>
                                                 </td>
-                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: center;padding: 4px;">
+                                                <td style="border-width: 2.5px;border-left-style: ridge;border-right-style: ridge; font-weight: normal; font-size:21px; text-align: center;padding: 4px;">
                                                     <t t-if="linea.date_planned">
                                                         <span style="color:#454545;font-family: Arial;" t-esc="linea.date_planned"/>
                                                     </t>
