--- a/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
+++ b/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
@@ -258,15 +258,15 @@
                                                     <span style="color:#454545;font-family: Arial;" t-esc="o.pricelist_id.currency_id.symbol +str('%.2f'%o.amount_untaxed)"/>
                                                 </td>
                                             </tr>
-                                            <t t-foreach="doc.amount_by_group" t-as="amount_by_group">
+                                            <t t-foreach="o.amount_by_group" t-as="amount_by_group">
                                                 <tr style="">
-                                                    <t t-if="amount_by_group[5] == 1 and doc.amount_untaxed == amount_by_group[2]">
+                                                    <t t-if="amount_by_group[5] == 1 and o.amount_untaxed == amount_by_group[2]">
                                                         <td name="td_amount_by_group_label_3">
                                                             <span t-esc="amount_by_group[0]"/>
-                                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/></span>
+                                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: o.pricelist_id.currency_id}"/></span>
                                                         </td>
                                                         <td name="td_amount_by_group_3" class="text-right o_price_total">
-                                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: o.pricelist_id.currency_id}"/>
                                                         </td>
                                                     </t>
                                                     <t t-else="">
@@ -274,7 +274,7 @@
                                                             <span t-esc="amount_by_group[0]"/>
                                                         </td>
                                                         <td name="td_amount_by_group" class="text-right o_price_total">
-                                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: o.pricelist_id.currency_id}"/>
                                                         </td>
                                                     </t>
                                                 </tr>
