--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -1,5 +1,11 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
+    <template id="sale_stock.report_invoice_document_inherit_sale_stock">
+    </template>
+    <template id="sale.report_invoice_document_inherit_sale">
+    </template>
+
+
     <template id="account.report_invoice_document">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
