--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -1,7 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-    
-    <template id="sale.report_invoice_document_inherit_sale">
+    <template id="sale.report_invoice_document_inherit_sale" inherit_id="sale.report_invoice_document_inherit_sale" active="False" customize_show="True"></template>
+    <template id="sale_stock.report_invoice_document_inherit_sale_stock" inherit_id="sale_stock.report_invoice_document_inherit_sale_stock" active="False" customize_show="True"></template>
+
+
+    <template id="account.report_invoice_document">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <div class="header">
