--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -1,8 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-    <template id="account_move_report_formats.report_invoice_document_inherit_sale_e" inherit_id="sale.report_invoice_document_inherit_sale" active="False"></template>
-    <template id="account_move_report_formats.report_invoice_document_inherit_sale_stock_e" inherit_id="sale_stock.report_invoice_document_inherit_sale_stock" active="False"></template>
-
+    <delete id="sale_stock.report_invoice_document_inherit_sale_stock" model="ir.ui.view" />
+    <delete id="sale.report_invoice_document_inherit_sale" model="ir.ui.view" />
 
     <template id="account.report_invoice_document">
         <t t-call="web.html_container">
