--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -2,7 +2,7 @@
 <odoo>
     <delete id="sale_stock.report_invoice_document_inherit_sale_stock" model="ir.ui.view" />
     <delete id="sale.report_invoice_document_inherit_sale" model="ir.ui.view" />
-
+    <delete id="sale_stock.sale_stock_report_invoice_document" model="ir.ui.view" />
     <template id="account.report_invoice_document">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
