--- a/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
+++ b/sale_order_report_formats/views/sale_order_nuevo_formato_reporte.xml
@@ -296,33 +296,10 @@
     </template>
 
 
-
-        <record id="paperformat_despacho_it_copsol" model="report.paperformat">
-            <field name="name">Reporte Despacho</field>
-            <field name="default" eval="False" />
-            <field name="format">A4</field>
-            <field name="page_height">0</field>
-            <field name="page_width">0</field>
-            <field name="orientation">Portrait</field>
-            <field name="margin_top">50</field>
-            <field name="margin_bottom">24</field>
-            <field name="margin_left">7</field>
-            <field name="margin_right">7</field>
-            <field name="header_line" eval="False" />
-            <field name="header_spacing">45</field>
-            <field name="dpi">90</field>
-        </record>
-
-
-    <report 
-        id="action_sale_order_coopsol"
-        string="Presupuesto/Pedido"
-        model="sale.order"
-        report_type="qweb-pdf"
-        file="sale_order_report_formats.reporte_sale_order_coopsol"
-        name="sale_order_report_formats.reporte_sale_order_coopsol"
-        paperformat="sale_order_report_formats.paperformat_despacho_it_copsol"
-        print_report_name="'Orden de Despacho N° - %s' % (object.name)"
-        />
+    <template id="report_sale_order_inherit_tecniases" inherit_id="sale.report_saleorder">
+        <xpath expr="//t[@t-call='sale.report_saleorder_document']" position="replace">
+                <t t-call="sale_order_report_formats.reporte_sale_order_coopsol" t-lang="doc.partner_id.lang"/>
+        </xpath>
+    </template>
 </odoo>
                 
